# MessagingApp

./: .gitignore  CMakeLists.txt  README.md
include/: client.h  hashmap.h  macros.h  message.h  server.h  user.h
src/: client.c  ctui.c  hashmap.c  macros.c  main.c  server.c
